# roxie

./: .gitignore  Cargo.toml  STYLE_GUIDE2.MD  TODO.MD  proxies.json
.claude/: settings.json  settings.local.json
examples/: pooling_test.rs  semaphore_test.rs  shadowsocks_server_test.rs
src/: lib.rs
src/client/: connection_pool.rs
src/config/: http_config.rs  hysteria2_config.rs  mod.rs  proxy_config.rs  shadowsocks_config.rs  socks4_config.rs  socks5_config.rs  tls_config.rs  tor_config.rs  trojan_config.rs  vmess_config.rs
src/errors/: config_errors.rs  endpoint_errors.rs  http_errors.rs  hysteria2_errors.rs  mod.rs  parse_errors.rs  proxy_errors.rs  shadowsocks_errors.rs  socks4_errors.rs  socks5_errors.rs  tls_errors.rs  tor_errors.rs  trojan_errors.rs  vmess_errors.rs
src/extensions/: mod.rs  proxy_list_ext.rs  proxy_pool_ext.rs
src/protocols/: http.rs  hysteria2.rs  mod.rs  shadowsocks.rs  socks4.rs  socks5.rs  tor.rs  trojan.rs
src/transport/: endpoint.rs  mod.rs  proxy.rs  proxy_list.rs  proxy_pool.rs  streams.rs  tls.rs
src/utils/: json_export.rs  json_parse.rs  json_structure.rs  mod.rs  proxy_secondary.rs
tests/: export_import.rs  live_proxylist_connect.rs  live_shadowsocks_probe.rs  live_shadowsocks_public_endpoints.rs  live_shadowsocks_stress.rs  live_tls_connect.rs  live_tor_connect.rs  test-servers.rs
tests/local-test-servers/: .gitignore  README.md  start_servers.bat  start_servers.sh
tests/local-test-servers/bins/linux/: .gitkeep
tests/local-test-servers/bins/windows/: .gitkeep
