[package]
name = "roxie"
version = "0.1.0"
edition = "2024"

[dependencies]
idna = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "fs", "sync"] }
tracing = "0.1.43"
zeroize = "1.8.1"
parking_lot = "0.12.3"

# HTTP / URL handling
base64 = { version = "0.22.1", optional = true }
url = { version = "2.5.4", optional = true }

# TLS
rustls = { version = "0.23.35", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "0.26.6", optional = true }

# Shadowsocks crypto
aes-gcm = { version = "0.10.3", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
hkdf = { version = "0.12.4", optional = true }
md5 = { version = "0.7.0", optional = true }
rand = "0.8.5"
sha1 = { version = "0.10.6", optional = true }
rustls-pki-types = "1.13.1"
futures = "0.3.31"

[dev-dependencies]
scraper = "0.25.0"
tempfile = "3.24.0"
tracing-subscriber = "0.3.22"

[features]
default = ["http", "socks4", "socks5", "tls", "all"]
all = ["http", "socks4", "socks5", "tls", "hysteria2", "shadowsocks", "vmess", "tor", "trojan"]
http = ["base64", "url"]
socks4 = ["url"]
socks5 = ["url"]
tls = ["tokio-rustls", "rustls", "webpki-roots"]
shadowsocks = ["aes-gcm", "chacha20poly1305", "hkdf", "md5", "sha1"]
hysteria2 = []
tor = ["socks5"]
vmess = []
trojan = []
