[package]
name = "roxie"
version = "0.1.0"
edition = "2024"

[dependencies]
idna = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "fs", "sync"] }
tracing = "0.1.43"
zeroize = "1.8.1"
parking_lot = "0.12.3"

# HTTP / URL handling
base64 = { version = "0.22.1", optional = true }
url = { version = "2.5.4", optional = true }

# TLS
rustls = { version = "0.23.35", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "0.26.6", optional = true }

# Shadowsocks crypto
aes-gcm = { version = "0.10.3", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
hkdf = { version = "0.12.4", optional = true }
md5 = { version = "0.7.0", optional = true }
rand = "0.8.5"
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10", optional = true }
rustls-pki-types = "1.13.1"
futures = "0.3.31"

# WebSocket (Trojan-WS)
tokio-tungstenite = { version = "0.26", optional = true }

# QUIC / Hysteria2
quinn = { version = "0.11", features = ["rustls"], optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
http = { version = "1", optional = true }
blake3 = { version = "1", optional = true }

[dev-dependencies]
scraper = "0.25.0"
tempfile = "3.24.0"
tracing-subscriber = "0.3.22"

[features]
default = ["http", "socks4", "socks5", "tls", "all"]
all = ["http", "socks4", "socks5", "tls", "hysteria2", "shadowsocks", "vmess", "tor", "trojan"]
http = ["dep:base64", "dep:url"]
socks4 = ["dep:url"]
socks5 = ["dep:url"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:webpki-roots"]
shadowsocks = ["dep:aes-gcm", "dep:chacha20poly1305", "dep:hkdf", "dep:md5", "dep:sha1"]
hysteria2 = ["dep:quinn", "dep:h3", "dep:h3-quinn", "dep:http", "dep:url", "dep:blake3", "tls"]
tor = ["socks5"]
vmess = []
trojan = ["dep:sha2", "dep:tokio-tungstenite", "tls"]

# ── Live / ignored integration tests ────────────────────────────────────────
# All tests inside these files are #[ignore] – they require external
# network access (real proxies, Tor, TLS endpoints, etc.).
# Run a specific one with:
#   cargo test --test <name> -- --ignored --nocapture

[[test]]
name = "live_proxylist_connect"
path = "tests/ignored/live_proxylist_connect.rs"

[[test]]
name = "live_tls_connect"
path = "tests/ignored/live_tls_connect.rs"

[[test]]
name = "live_tor_connect"
path = "tests/ignored/live_tor_connect.rs"

[[test]]
name = "live_hysteria2_probe"
path = "tests/ignored/live_hysteria2_probe.rs"

[[test]]
name = "live_shadowsocks_probe"
path = "tests/ignored/live_shadowsocks_probe.rs"

[[test]]
name = "live_shadowsocks_public_endpoints"
path = "tests/ignored/live_shadowsocks_public_endpoints.rs"

[[test]]
name = "live_shadowsocks_stress"
path = "tests/ignored/live_shadowsocks_stress.rs"

[[test]]
name = "live_shadowsocks_cleanup_ebrasha"
path = "tests/ignored/live_shadowsocks_cleanup_ebrasha.rs"

[[test]]
name = "live_mass_proxy_test"
path = "tests/ignored/live_mass_proxy_test.rs"

[[test]]
name = "live_trojan_probe"
path = "tests/ignored/live_trojan_probe.rs"

[[test]]
name = "live_shadowsocks_fragmented_read"
path = "tests/ignored/live_shadowsocks_fragmented_read.rs"

[[test]]
name = "test_servers"
path = "tests/test-servers.rs"
